--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,37 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title><%= title %></title>
-  <link rel="stylesheet" href="/css/style.css">
+  <%- include("partials/head") %>
+  <title>Login</title>
 </head>
 <body>
-  <header>
-    <% nav.forEach(item => { %>
-      <a href="<%= item.link %>"><%= item.name %></a>
-    <% }) %>
-  </header>
+  <%- include("partials/header") %>
+  <%- include("partials/navigation") %>
 
   <main>
-    <h1>Login</h1>
-
-    <% if (error.length) { %>
-      <ul style="color:red;">
-        <% error.forEach(msg => { %>
-          <li><%= msg %></li>
-        <% }) %>
-      </ul>
+    <% if (message.length > 0) { %>
+      <p style="color:green"><%= message %></p>
     <% } %>
-
-    <form action="/account/login" method="POST">
-      <label>Email: <input type="email" name="account_email" required></label><br>
-      <label>Password: <input type="password" name="account_password" required></label><br>
+    <h2>Login</h2>
+    <form action="/auth/login" method="POST">
+      <label>Email: <input type="email" name="email"></label><br>
+      <label>Password: <input type="password" name="password"></label><br>
       <button type="submit">Login</button>
     </form>
   </main>
-
-  <footer>
-    <p>&copy; 2026 CSE Motors</p>
-  </footer>
 </body>
 </html>
