--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,3 @@
-<header class="site-header">
-  <a href="/">Home</a>
-  <a href="/inv">Inventory</a>
-
-  <% if (typeof user !== "undefined" && user) { %>
-    <span>Welcome, <%= user.account_firstname %>!</span>
-    <a href="/account/management">My Account</a>
-    <a href="/account/logout">Logout</a>
-  <% } else { %>
-    <a href="/account/login">Login</a>
-  <% } %>
+<header>
+  <h1>CSE Motors</h1>
 </header>
