--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -9,15 +9,14 @@
   <%- include("partials/navigation") %>
 
   <main>
-    <% if (message.length > 0) { %>
-      <p style="color:green"><%= message %></p>
-    <% } %>
-    <h2>Login</h2>
+    <h1>Login</h1>
     <form action="/auth/login" method="POST">
-      <label>Email: <input type="email" name="email"></label><br>
-      <label>Password: <input type="password" name="password"></label><br>
+      <input type="text" name="username" placeholder="Username" required><br>
+      <input type="password" name="password" placeholder="Password" required><br>
       <button type="submit">Login</button>
     </form>
   </main>
+
+  <%- include("partials/footer") %>
 </body>
 </html>
