--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -2,21 +2,20 @@
 <html>
 <head>
   <%- include("partials/head") %>
-  <title>Inventory</title>
+  <title>Inventory Management</title>
 </head>
 <body>
   <%- include("partials/header") %>
   <%- include("partials/navigation") %>
 
   <main>
-    <% if (message.length > 0) { %>
-      <p style="color:green"><%= message %></p>
-    <% } %>
     <h1>Inventory Management</h1>
     <ul>
       <li><a href="/inv/add-classification">Add Classification</a></li>
       <li><a href="/inv/add-inventory">Add Inventory Item</a></li>
     </ul>
   </main>
+
+  <%- include("partials/footer") %>
 </body>
 </html>
