--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
 <footer>
-  <p>&copy; 2026 CSE Motors</p>
+  <hr>
+  <p>&copy; <%= new Date().getFullYear() %> CSE Motors</p>
+  <p>
+    <a href="/inv/error">Trigger Server Error</a>
+  </p>
 </footer>
+</body>
+</html>
