--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,15 @@
-<header>
-  <h1>CSE Motors</h1>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= title %></title>
+  <link rel="stylesheet" href="/css/styles.css">
+</head>
+<body>
+  <header>
+    <h1>CSE Motors</h1>
+  </header>
+  <nav>
+    <%- nav %>
+  </nav>
