--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <%- include("partials/head") %>
-    <title><%= title %></title>
-  </head>
-  <body>
-    <%- include("partials/navigation") %>
-
-    <h1><%= title %></h1>
-    <p><%= message %></p>
-
-    <%- include("partials/footer") %>
-  </body>
-</html>
+<%- include('partials/header') %>
+<h1><%= title %></h1>
+<p><%= message %></p>
+<%- include('partials/footer') %>
+>
