--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <%- include("partials/head") %>
-  </head>
-  <body>
-    <%- include("partials/navigation") %>
-
-    <h1><%= title %></h1>
-    <p><%= message || "An unexpected error occurred." %></p>
-
-    <%- include("partials/footer") %>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title><%= title %></title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <%- include("partials/navigation") %>
+  <h1><%= title %></h1>
+  <p><%= message || "An unexpected error occurred." %></p>
+</body>
 </html>
