--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,3 @@
 <footer>
-  <hr>
-  <p>&copy; <%= new Date().getFullYear() %> CSE Motors</p>
-  <p>
-    <a href="/inv/error">Trigger Server Error</a>
-  </p>
+  <p>© 2026 Jones Surf Shop</p>
 </footer>
-</body>
-</html>
