--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title><%= title %></title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <%- include("partials/header") %>
-  <%- include("partials/navigation") %>
-
+  <%- include('partials/navigation') %>
   <main>
     <%- body %>
   </main>
-
-  <%- include("partials/footer") %>
+  <%- include('partials/footer') %>
 </body>
 </html>
