--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,2 +1,14 @@
-<h1><%= title %></h1>
-<p><%= message || "An unexpected error occurred." %></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Error</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <h1>Error</h1>
+  <p><%= message %></p>
+  <a href="/">Go Home</a>
+</body>
+</html>
