--- a/views/inventory/vehicle-detail.ejs
+++ b/views/inventory/vehicle-detail.ejs
@@ -1,7 +1,14 @@
-<%- include('../partials/header') %>
-<main>
-  <div class="vehicle-container">
-    <%- vehicleHTML %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Vehicle Detail</title>
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
+<body>
+  <a href="/inventory">Go Back</a>
+  <div>
+    <%- html %>
   </div>
-</main>
-<%- include('../partials/footer') %>
+</body>
+</html>
