fix: kill any old Node processes using port 10000 and start server safely

--- a/views/inventory-detail.ejs
+++ b/views/inventory-detail.ejs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Vehicle Detail</title>
-  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <h1>Vehicle Detail</h1>
-  <%= vehicleHTML %>
-  <a href="/inventory">Back to Inventory</a>
+  <a href="/inventory">← Back to Inventory</a>
+  <div>
+    <%- vehicleHTML %>
+  </div>
 </body>
 </html>
