--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,2 +1,12 @@
-<h1>404 - Page Not Found</h1>
-<p>The page you requested does not exist.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>404 - Not Found</title>
+</head>
+<body>
+  <h1>404 - Page Not Found</h1>
+  <p>No page found at <%= url %></p>
+  <a href="/">Return Home</a>
+</body>
+</html>
