--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,2 +1,12 @@
-<h1>500 - Server Error</h1>
-<p><%= error %></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>500 - Internal Server Error</title>
+</head>
+<body>
+  <h1>500 - Internal Server Error</h1>
+  <p><%= message %></p>
+  <a href="/">Return Home</a>
+</body>
+</html>
