--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,4 +1,17 @@
-<h1><%= title %></h1>
-<div>
-  <%- vehicleHTML %>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title><%= title %></title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  <%- include('../partials/header') %>
+
+  <div class="detail-container">
+    <%- vehicleHTML %>
+  </div>
+
+  <%- include('../partials/footer') %>
+</body>
+</html>
