--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
 <footer>
-  <a href="/error/trigger">Trigger 500 Error</a>
+  <p>&copy; 2026 Vehicle Inventory</p>
+  <a href="/trigger-error">Trigger Error</a>
 </footer>
