--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,12 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>404 - Not Found</title>
-</head>
-<body>
-  <h1>404 - Page Not Found</h1>
-  <p>No page found at <%= url %></p>
-  <a href="/">Return Home</a>
-</body>
-</html>
+<h1>404 - Page Not Found</h1>
+<p>The page you are looking for does not exist.</p>
