--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title><%= title %></title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-  <%- include('../partials/header') %>
-
-  <div class="detail-container">
-    <%- vehicleHTML %>
-  </div>
-
-  <%- include('../partials/footer') %>
-</body>
-</html>
+<h1><%= title %></h1>
+<div>
+  <%- vehicleHTML %>
+</div>
