--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,2 +1,2 @@
 <h1>404 - Page Not Found</h1>
-<p>The page you are looking for does not exist.</p>
+<p>Sorry, the page you requested could not be found.</p>
