--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,10 +1,9 @@
-const express = require("express");
-const router = express.Router();
+<%- include("../partials/header") %>
 
-router.get("/trigger", (req, res, next) => {
-  const err = new Error("Intentional server error!");
-  err.status = 500;
-  next(err);
-});
+<main>
+  <h1><%= title %></h1>
+  <p><%= message %></p>
+  <a href="/">Return to Home</a>
+</main>
 
-module.exports = router;
+<%- include("../partials/footer") %>
