--- a/views/inventory/vehicle-detail.ejs
+++ b/views/inventory/vehicle-detail.ejs
@@ -1,14 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Vehicle Detail</title>
-  <link rel="stylesheet" href="/css/style.css" />
-</head>
-<body>
-  <a href="/inventory">Go Back</a>
-  <div>
-    <%- html %>
-  </div>
-</body>
-</html>
+function buildVehicleDetail(vehicle) {
+  const price = new Intl.NumberFormat("en-US", {
+    style: "currency",
+    currency: "USD",
+  }).format(vehicle.inv_price)
+
+  const mileage = new Intl.NumberFormat("en-US")
+    .format(vehicle.inv_miles)
+
+  return `
+    <div class="vehicle-detail">
+      <div class="vehicle-image">
+        <img src="${vehicle.inv_image}" 
+             alt="Image of ${vehicle.inv_year} ${vehicle.inv_make} ${vehicle.inv_model}">
+      </div>
+
+      <div class="vehicle-info">
+        <h2>${vehicle.inv_year} ${vehicle.inv_make} ${vehicle.inv_model}</h2>
+
+        <p><strong>Price:</strong> ${price}</p>
+        <p><strong>Mileage:</strong> ${mileage} miles</p>
+        <p><strong>Color:</strong> ${vehicle.inv_color}</p>
+        <p><strong>Description:</strong> ${vehicle.inv_description}</p>
+      </div>
+    </div>
+  `
+}
+
+module.exports = {
+  handleErrors,
+  buildVehicleDetail,
+}
