--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <footer>
-  <p>&copy; 2026 Vehicle Inventory</p>
-  <a href="/trigger-error">Trigger Error</a>
+  <p>&copy; 2025 CSE Motors</p>
+  <p><a href="/inv/trigger-error">Trigger 500 Error</a></p>
 </footer>
