--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,9 @@
-<footer>
-  <p>&copy; 2025 CSE Motors</p>
-  <p><a href="/inv/trigger-error">Trigger 500 Error</a></p>
-</footer>
+<%- include("../partials/header") %>
+
+<main>
+  <h1><%= title %></h1>
+  <p><%= message %></p>
+  <a href="/">Return to Home</a>
+</main>
+
+<%- include("../partials/footer") %>
