--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,5 +1,9 @@
-<%- include('partials/header') %>
-<h1><%= title %></h1>
-<p><%= message %></p>
-<%- include('partials/footer') %>
->
+<%- include("../partials/header") %>
+
+<main>
+  <h1><%= title %></h1>
+  <p><%= message %></p>
+  <a href="/">Return Home</a>
+</main>
+
+<%- include("../partials/footer") %>
