--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -3,7 +3,7 @@
 <main>
   <h1><%= title %></h1>
   <p><%= message %></p>
-  <a href="/">Return Home</a>
+  <a href="/">Return to Home</a>
 </main>
 
 <%- include("../partials/footer") %>
