Fix server port conflict, database connection, and vehicle detail page utilities

--- a/views/errors/500.ejs
+++ b/views/errors/500.ejs
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>500 Server Error</title>
+  <title>Server Error</title>
 </head>
 <body>
   <h1>500 - Internal Server Error</h1>
-  <a href="/">Go Home</a>
 </body>
 </html>
