--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title><%= title %></title>
+  <title>Vehicle Detail</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <%- vehicleHTML %>
-
-  <footer>
-    <a href="/inventory/trigger-error">Trigger 500 Error</a>
-  </footer>
+  <%= html %>
 </body>
 </html>
