--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="/css/styles.css">
-  <title><%= title %></title>
-</head>
+<head><title><%= title %></title></head>
 <body>
-  <% include ../partials/header %>
-  <% include ../partials/nav %>
-
-  <main>
-    <h1>Add Classification</h1>
-    <form action="/inv/add-classification" method="POST">
-      <label for="name">Classification Name:</label>
-      <input type="text" name="name" id="name" required>
-      <button type="submit">Add</button>
-    </form>
-  </main>
-
-  <% include ../partials/footer %>
+  <h1>Add Classification</h1>
+  <% if (message) { %><p style="color:red"><%= message %></p><% } %>
+  <form action="/inv/add-classification" method="POST" novalidate>
+    <label for="classification_name">Classification Name:</label>
+    <input type="text" id="classification_name" name="classification_name" pattern="\w+" required>
+    <button type="submit">Add</button>
+  </form>
 </body>
 </html>
