--- a/views/inventory/add-vehicle.ejs
+++ b/views/inventory/add-vehicle.ejs
@@ -1,49 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title><%= title %></title>
-</head>
+<html lang="en">
+<head><title><%= title %></title></head>
 <body>
-  <h1>Add Inventory</h1>
-
-  <% if (message && message.length > 0) { %>
-    <p style="color:red"><%= message %></p>
-  <% } %>
-
-  <form action="/inv/add-inventory" method="POST">
-    <label for="classification_id">Classification:</label>
-    <%= classificationList %><br><br>
-
-    <label for="inv_make">Make:</label>
-    <input type="text" name="inv_make" value="<%= stickyData.inv_make || '' %>" required><br><br>
-
-    <label for="inv_model">Model:</label>
-    <input type="text" name="inv_model" value="<%= stickyData.inv_model || '' %>" required><br><br>
-
-    <label for="inv_year">Year:</label>
-    <input type="number" name="inv_year" value="<%= stickyData.inv_year || '' %>" required><br><br>
-
-    <label for="inv_description">Description:</label>
-    <textarea name="inv_description" required><%= stickyData.inv_description || '' %></textarea><br><br>
-
-    <label for="inv_image">Image Path:</label>
-    <input type="text" name="inv_image" value="<%= stickyData.inv_image || '/images/no-image.png' %>"><br><br>
-
-    <label for="inv_thumbnail">Thumbnail Path:</label>
-    <input type="text" name="inv_thumbnail" value="<%= stickyData.inv_thumbnail || '/images/no-image.png' %>"><br><br>
-
-    <label for="inv_price">Price:</label>
-    <input type="number" name="inv_price" value="<%= stickyData.inv_price || '' %>" required><br><br>
-
-    <label for="inv_miles">Miles:</label>
-    <input type="number" name="inv_miles" value="<%= stickyData.inv_miles || '' %>" required><br><br>
-
-    <label for="inv_color">Color:</label>
-    <input type="text" name="inv_color" value="<%= stickyData.inv_color || '' %>" required><br><br>
-
-    <button type="submit">Add Inventory</button>
+  <h1>Add Vehicle</h1>
+  <% if (message) { %><p style="color:red"><%= message %></p><% } %>
+  <form action="/inv/add-vehicle" method="POST" novalidate>
+    <label>Classification:</label>
+    <%- classifications %>
+    <label>Make:</label>
+    <input type="text" name="inv_make" value="<%= sticky.inv_make || '' %>" required>
+    <label>Model:</label>
+    <input type="text" name="inv_model" value="<%= sticky.inv_model || '' %>" required>
+    <label>Description:</label>
+    <textarea name="inv_description" required><%= sticky.inv_description || '' %></textarea>
+    <label>Price:</label>
+    <input type="number" name="inv_price" value="<%= sticky.inv_price || '' %>" required>
+    <label>Year:</label>
+    <input type="number" name="inv_year" value="<%= sticky.inv_year || '' %>" required>
+    <label>Miles:</label>
+    <input type="number" name="inv_miles" value="<%= sticky.inv_miles || '' %>" required>
+    <label>Color:</label>
+    <input type="text" name="inv_color" value="<%= sticky.inv_color || '' %>" required>
+    <button type="submit">Add Vehicle</button>
   </form>
-
-  <a href="/inv/">Back to Management</a>
 </body>
 </html>
