--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head><title><%= title %></title></head>
-<body>
-  <h1>Add Classification</h1>
-  <% if (message) { %><p style="color:red"><%= message %></p><% } %>
-  <form action="/inv/add-classification" method="POST" novalidate>
-    <label for="classification_name">Classification Name:</label>
-    <input type="text" id="classification_name" name="classification_name" pattern="\w+" required>
-    <button type="submit">Add</button>
-  </form>
-</body>
-</html>
+<h1>Add Classification</h1>
+<% if (message) { %>
+  <p style="color:red;"><%= message %></p>
+<% } %>
+<form method="POST" action="/inv/add-classification">
+  <label for="classification_name">Classification Name:</label>
+  <input type="text" name="classification_name" id="classification_name" required pattern="[a-zA-Z0-9]+">
+  <button type="submit">Add</button>
+</form>
