--- a/views/inventory/add-vehicle.ejs
+++ b/views/inventory/add-vehicle.ejs
@@ -1,17 +1,14 @@
 <h1>Add Vehicle</h1>
-<% if (message) { %>
+<% if(message){ %>
   <p style="color:red;"><%= message %></p>
 <% } %>
-<form method="POST" action="/inv/add-vehicle">
+<form method="POST" action="/inv/add-vehicle" novalidate>
   <%= classificationList %>
-  <input type="text" name="inv_make" placeholder="Make" required>
-  <input type="text" name="inv_model" placeholder="Model" required>
-  <input type="number" name="inv_year" placeholder="Year" required>
-  <input type="text" name="inv_description" placeholder="Description">
-  <input type="text" name="inv_image" placeholder="Image Path">
-  <input type="text" name="inv_thumbnail" placeholder="Thumbnail Path">
-  <input type="number" step="0.01" name="inv_price" placeholder="Price" required>
-  <input type="number" name="inv_miles" placeholder="Miles" required>
-  <input type="text" name="inv_color" placeholder="Color">
+  <input type="text" name="inv_make" placeholder="Make" value="<%= sticky.inv_make || '' %>" required>
+  <input type="text" name="inv_model" placeholder="Model" value="<%= sticky.inv_model || '' %>" required>
+  <input type="number" name="inv_year" placeholder="Year" value="<%= sticky.inv_year || '' %>" required>
+  <input type="number" step="0.01" name="inv_price" placeholder="Price" value="<%= sticky.inv_price || '' %>" required>
+  <input type="number" name="inv_miles" placeholder="Miles" value="<%= sticky.inv_miles || '' %>" required>
+  <input type="text" name="inv_color" placeholder="Color" value="<%= sticky.inv_color || '' %>" required>
   <button type="submit">Add Vehicle</button>
 </form>
