--- a/views/inventory/add-classification.ejs
+++ b/views/inventory/add-classification.ejs
@@ -1,8 +1,19 @@
-<h1>Add Classification</h1>
-<% if(message){ %>
-  <p style="color:red;"><%= message %></p>
-<% } %>
-<form method="POST" action="/inv/add-classification" novalidate>
-  <input type="text" name="classification_name" value="<%= sticky %>" required pattern="[A-Za-z0-9]+">
-  <button type="submit">Add</button>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+  <title><%= title %></title>
+</head>
+<body>
+  <h1>Add Classification</h1>
+  <% if(errors.length > 0) { %>
+    <ul style="color:red;">
+      <% errors.forEach(e => { %><li><%= e.msg %></li><% }) %>
+    </ul>
+  <% } %>
+  <form method="POST" action="/inv/add-classification">
+    <label for="classification_name">Name:</label>
+    <input type="text" name="classification_name" id="classification_name" required pattern="[A-Za-z0-9]+" value="<%= data.classification_name || '' %>">
+    <button type="submit">Add</button>
+  </form>
+</body>
+</html>
