--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,22 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <%- include("partials/head") %>
-  <title>Login</title>
-</head>
-<body>
-  <%- include("partials/header") %>
-  <%- include("partials/navigation") %>
+<!-- views/account/login.ejs -->
+<h1>Login</h1>
 
-  <main>
-    <h1>Login</h1>
-    <form action="/auth/login" method="POST">
-      <input type="text" name="username" placeholder="Username" required><br>
-      <input type="password" name="password" placeholder="Password" required><br>
-      <button type="submit">Login</button>
-    </form>
-  </main>
+<% if (message) { %>
+  <p class="error"><%= message %></p>
+<% } %>
 
-  <%- include("partials/footer") %>
-</body>
-</html>
+<form action="/account/login" method="POST">
+  <label>Email:
+    <input type="email" name="email" required>
+  </label>
+  <label>Password:
+    <input type="password" name="password" required>
+  </label>
+  <input type="submit" value="Login">
+</form>
