--- a/views/account/update-account.ejs
+++ b/views/account/update-account.ejs
@@ -1,51 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title><%= title %></title>
-</head>
-<body>
-  <%- nav %>
+<!-- views/account/update-account.ejs -->
+<h1>Update Account</h1>
 
-  <h1>Update Account</h1>
+<% if (errors) { %>
+  <ul>
+    <% errors.forEach(error => { %>
+      <li class="error"><%= error %></li>
+    <% }) %>
+  </ul>
+<% } %>
 
-  <% if (errors) { %>
-    <ul style="color:red;">
-      <% errors.forEach(error => { %>
-        <li><%= error.msg %></li>
-      <% }) %>
-    </ul>
-  <% } %>
+<form action="/account/update" method="POST">
+  <input type="hidden" name="account_id" value="<%= account.account_id %>">
+  <label>First Name: <input type="text" name="firstname" value="<%= account.firstname %>" required></label>
+  <label>Last Name: <input type="text" name="lastname" value="<%= account.lastname %>" required></label>
+  <label>Email: <input type="email" name="email" value="<%= account.email %>" required></label>
+  <input type="submit" value="Update Account">
+</form>
 
-  <% if (message) { %>
-    <p style="color:green;"><%= message %></p>
-  <% } %>
-
-  <!-- Account Info Update -->
-  <form action="/account/update" method="POST">
-    <input type="hidden" name="account_id" value="<%= account.account_id %>">
-
-    <label>First Name:</label>
-    <input type="text" name="account_firstname" value="<%= account.account_firstname %>" required><br>
-
-    <label>Last Name:</label>
-    <input type="text" name="account_lastname" value="<%= account.account_lastname %>" required><br>
-
-    <label>Email:</label>
-    <input type="email" name="account_email" value="<%= account.account_email %>" required><br>
-
-    <input type="submit" value="Update Info">
-  </form>
-
-  <!-- Password Update -->
-  <form action="/account/update-password" method="POST">
-    <input type="hidden" name="account_id" value="<%= account.account_id %>">
-
-    <label>New Password:</label>
-    <input type="password" name="new_password" required><br>
-    <small>Password must be at least 8 characters.</small><br>
-
-    <input type="submit" value="Update Password">
-  </form>
-</body>
-</html>
+<h2>Change Password</h2>
+<form action="/account/password" method="POST">
+  <input type="hidden" name="account_id" value="<%= account.account_id %>">
+  <label>New Password: <input type="password" name="password" required></label>
+  <p>Password must be at least 8 characters.</p>
+  <input type="submit" value="Change Password">
+</form>
